Hot fix for BaseFlex spacing, renamed from size

--- a/src/components/BaseFlex/BaseFlex.module.scss
+++ b/src/components/BaseFlex/BaseFlex.module.scss
@@ -6,8 +6,8 @@
     display: flex;
 }
 
-.size-none,
-.size-0 {
+.spacing-none,
+.spacing-0 {
     margin: 0;
 
     > * {
@@ -16,91 +16,91 @@
 }
 
 // @todo spacer maps could be much better and would save repetition (Base Spacer)
-.size-2xs {
+.spacing-2xs {
     margin: calc($spacer2Xs / 2 * -1);
 
     > * {
         margin: calc($spacer2Xs / 2);
     }
 }
-.size-xs {
+.spacing-xs {
     margin: calc($spacerXs / 2 * -1);
 
     > * {
         margin: calc($spacerXs / 2);
     }
 }
-.size-sm {
+.spacing-sm {
     margin: calc($spacerSm / 2 * -1);
 
     > * {
         margin: calc($spacerSm / 2);
     }
 }
-.size-base{
+.spacing-base{
     margin: calc($spacerDefault/ 2 * -1);
 
     > * {
         margin: calc($spacerDefault / 2);
     }
 }
-.size-md {
+.spacing-md {
     margin: calc($spacerMd / 2 * -1);
 
     > * {
         margin: calc($spacerMd / 2);
     }
 }
-.size-lg {
+.spacing-lg {
     margin: calc($spacerLg / 2 * -1);
 
     > * {
         margin: calc($spacerLg / 2);
     }
 }
-.size-xl {
+.spacing-xl {
     margin: calc($spacerXl / 2 * -1);
 
     > * {
         margin: calc($spacerXl / 2);
     }
 }
-.size-2xl {
+.spacing-2xl {
     margin: calc($spacer2Xl / 2 * -1);
 
     > * {
         margin: calc($spacer2Xl / 2);
     }
 }
-.size-3xl {
+.spacing-3xl {
     margin: calc($spacer3Xl / 2 * -1);
 
     > * {
         margin: calc($spacer3Xl / 2);
     }
 }
-.size-4xl {
+.spacing-4xl {
     margin: calc($spacer4Xl / 2 * -1);
 
     > * {
         margin: calc($spacer4Xl / 2);
     }
 }
-.size-5xl {
+.spacing-5xl {
     margin: calc($spacer5Xl / 2 * -1);
 
     > * {
         margin: calc($spacer5Xl / 2);
     }
 }
-.size-6xl {
+.spacing-6xl {
     margin: calc($spacer6Xl / 2 * -1);
 
     > * {
         margin: calc($spacer6Xl / 2);
     }
 }
-.size-7xl {
+.spacing-7xl {
     margin: calc($spacer7Xl / 2 * -1);
 
     > * {
